add functinoality for adding exercises and workouts
